--- a/assets/resources.qrc
+++ b/assets/resources.qrc
@@ -8,8 +8,12 @@
 
 <RCC version="1.0">
   <qresource>
+    <file>images/back.png</file>
+    <file>images/settings.png</file>
     <file>images/logo.png</file>
     <file>images/logo.ico</file>
+    <file>images/plus.png</file>
+    <file>images/remove.png</file>
   </qresource>
 
   <qresource>
