--- a/assets/styles/dark.qss
+++ b/assets/styles/dark.qss
@@ -139,3 +139,28 @@ QLineEdit {
   margin: 2px;
   padding: 6px;
 }
+
+QProgressBar {
+  background-color: #272727;
+  border: 1px solid #808080;
+  border-radius: 5px;
+  margin: 2px;
+  padding: 6px;
+}
+
+QProgressBar::chunk {
+  background-color: #167dff;
+  border-radius: 5px;
+}
+
+QLabel#Heading {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+QPushButton#Transparent {
+  background-color: transparent;
+  color: #167dff;
+  border: none;
+  font-weight: 700;
+}
